--- a/Corporation-Data-Display/package.json
+++ b/Corporation-Data-Display/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "d3": "^7.9.0",
+    "millify": "^6.1.0",
     "papaparse": "^5.5.2",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13"
