--- a/Corporation-Data-Display/package.json
+++ b/Corporation-Data-Display/package.json
@@ -13,6 +13,7 @@
     "d3": "^7.9.0",
     "millify": "^6.1.0",
     "papaparse": "^5.5.2",
+    "randomcolor": "^0.6.2",
     "tailwindcss": "^4.1.3",
     "vue": "^3.5.13"
   },
